// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day component should render with an event 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#EEEEEE",
      }
    }
  >
    <div
      style={
        Object {
          "color": "#212121",
        }
      }
    >
      hello
    </div>
    <div>
      <button
        className=""
        onClick={[Function]}
        style={
          Object {
            "color": "#212121",
          }
        }
        type="button"
      >
        <i
          className="material-icons"
        >
          clear
        </i>
      </button>
      <button
        className=""
        onClick={[Function]}
        style={
          Object {
            "color": "#212121",
          }
        }
        type="button"
      >
        <i
          className="material-icons"
        >
          delete
        </i>
      </button>
    </div>
  </div>
  <button
    className="undefined"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#EEEEEE",
        "color": "#212121",
      }
    }
  >
    1
  </button>
</div>
`;

exports[`Day component should render with event form 1`] = `
<div>
  <div>
    <form
      onSubmit={[Function]}
    >
      <div>
        <div>
          <input
            name="event"
            onChange={[Function]}
            required={true}
            style={
              Object {
                "borderBottom": "2px solid undefined",
              }
            }
            type="text"
            value=""
          />
          <label
            htmlFor="nodejs"
          >
            Rappel
          </label>
        </div>
      </div>
      <ul
        className=""
      >
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FF5252",
              }
            }
            type="button"
            value="#FF5252"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FF4081",
              }
            }
            type="button"
            value="#FF4081"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#E040FB",
              }
            }
            type="button"
            value="#E040FB"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FF6E40",
              }
            }
            type="button"
            value="#FF6E40"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#448AFF",
              }
            }
            type="button"
            value="#448AFF"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#64FFDA",
              }
            }
            type="button"
            value="#64FFDA"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#B2FF59",
              }
            }
            type="button"
            value="#B2FF59"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#CDDC39",
              }
            }
            type="button"
            value="#CDDC39"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#795548",
              }
            }
            type="button"
            value="#795548"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#546E7A",
              }
            }
            type="button"
            value="#546E7A"
          />
        </li>
        <li>
          <button
            className=""
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#0097A7",
              }
            }
            type="button"
            value="#0097A7"
          />
        </li>
        <li>
          <button
            className="undefined"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#EEEEEE",
              }
            }
            type="button"
            value="#EEEEEE"
          />
        </li>
      </ul>
      <div>
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          <i
            className="material-icons"
          >
            clear
          </i>
        </button>
        <button
          className=""
          type="submit"
        >
          <i
            className="material-icons"
          >
            add
          </i>
        </button>
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          <i
            className="material-icons"
          >
            color_lens
          </i>
        </button>
      </div>
    </form>
  </div>
  <button
    className="undefined"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#EEEEEE",
        "color": "#212121",
      }
    }
  >
    1
  </button>
</div>
`;

exports[`Day component should render without problem 1`] = `
<div>
  <button
    className=""
    onClick={[Function]}
    style={Object {}}
  >
    1
  </button>
</div>
`;
